--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -30,7 +30,7 @@
         <!-- Friends -->
         <section id="user-friends">
             <ul>
-                <h4>Friends</h4>
+                <h4>Users</h4>
                 <% for(u of all_users) { %> 
                     <li>
                         <i class="fa-solid fa-circle-dot"></i>
