Production step 2 , Minified static assets

--- a/views/partials/chatbox.ejs
+++ b/views/partials/chatbox.ejs
@@ -18,6 +18,6 @@
     </section>
     <section id="chat-send-form">
         <input id="messege-text" class="form-control" type="text" placeholder="Type Your Message">
-        <button id="send-message" class="btn btn-outline-info" type="button"> <img src="/assets/images/send.png" alt="send button icon"> </button>
+        <button id="send-message" class="btn btn-outline-info" type="button"> <img src="<%= getAssetPath('/assets/images/send.png') %>" alt="send button icon"> </button>
     </section>
 </div>
