--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/assets/css/profile.css"> 
+<link rel="stylesheet" href="<%= getAssetPath('/assets/css/profile.css') %>"> 
 
 <div id="profileContainer" class="container-fluid">
   <section id="user-info">
@@ -87,4 +87,4 @@
   <% } %>
 </div>
 
-<script src="/js/userFriends.js"></script>
+<script src="<%= getAssetPath('/js/userFriends.js') %>"></script>
