--- a/views/style.ejs
+++ b/views/style.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/assets/css/style.css">   <!-- Base Stylesheet -->
-<link rel="stylesheet" href="/assets/css/nav.css">    <!-- Navbar Style -->
-<link rel="stylesheet" href="/assets/css/home.css">    <!-- Home Style -->
-<link rel="stylesheet" href="/assets/css/chatbox.css">    <!-- chatbox Style -->
+<link rel="stylesheet" href="<%= getAssetPath('/assets/css/style.css') %>">   <!-- Base Stylesheet -->
+<link rel="stylesheet" href="<%= getAssetPath('/assets/css/nav.css') %>">    <!-- Navbar Style -->
+<link rel="stylesheet" href="<%= getAssetPath('/assets/css/home.css') %>">    <!-- Home Style -->
+<link rel="stylesheet" href="<%= getAssetPath('/assets/css/chatbox.css') %>">    <!-- chatbox Style -->
