--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -46,9 +46,8 @@
     <% } %>
 </div>
 <script src="/js/commentData.js"></script>
-<script src="/js/postdata.js"></script>
+<script src="<%= getAssetPath('/js/postdata.js') %>"></script>
 
-<!-- CHANGE :: import the script file for toggle likes, also run it over for the already present posts and comments on the page -->
 <script src="/js/toggle_likes.js"></script>
 <script>
     $('.toggle-like-button').each(function(){
