--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,7 +12,7 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
           <a class="nav-link" href="Gallery.html">Gallery</a>
           <% if(locals.user) { %>
-            <a class="nav-link" href="/user/profile">About</a>
+            <a class="nav-link" href="/user/profile/<%= user.id %>">About</a>
           <% } %>
           <a class="nav-link" href="Contact.html">Contact</a>
           <form class="container-fluid mt-1">
